--- a/项目公示/第一批/02_GSE/公告.md
+++ b/项目公示/第一批/02_GSE/公告.md
@@ -6,7 +6,7 @@
 
 币改项目目前采取单独公示、单独披露、成批投票的方式推进。预期第一批项目的数量为 5 - 8 个，然后由筹备组成员或委员会成员进行集体投票评分，提交给 FCoin，由 FCoin 专家委员会最后决定哪些项目进入主板 C 交易区。
 
-现阶段币改项目采取宽进严出的，未来一段时间我们将加快项目公示的速度，欢迎符合要求并有意参加币改的项目方积极申报。
+现阶段币改项目采取宽进严出的原则，未来一段时间我们将加快项目公示的速度，欢迎符合要求并有意参加币改的项目方积极申报。
 
 
 ---------------------------------------------
